# C-Final-Project

./: hangman_modular.rar
hangman_modular/: CMakeLists.txt  Makefile  main_admin.cpp  main_game.cpp
hangman_modular/include/: AdminMenu.h  AdminTool.hpp  Colors.h  GameEngine.hpp  HangmanGame.h  HistoryLog.hpp  InputHandler.h  Leaderboard.hpp  ScoreManager.h  WordRepository.hpp  config.h  utils.hpp
hangman_modular/src/: AdminMenu.cpp  AdminTool.cpp  Colors.cpp  GameEngine.cpp  HangmanGame.cpp  HistoryLog.cpp  InputHandler.cpp  Leaderboard.cpp  ScoreManager.cpp  WordRepository.cpp  utils.cpp
